# pizzaware

./: Cargo.toml  README.md
src/: build.rs  kill_process.rs  main.rs  persistence.rs  play_music.rs  popups.rs  utils.rs  wallpaper.rs  websocket_client.rs
src/resources/: resources.rc
websockets_server/: ws_server.py
