[package]
name = "pizzaware"
version = "0.1.0"
edition = "2024"
build = "src/build.rs"

[dependencies]
windows = { version = "0.60", features = [
                        "Win32_System_Memory", 
                        "Win32_System_Registry",
                        "Win32_System_ProcessStatus", 
                        "Win32_System_Diagnostics_ToolHelp", 
                        "Win32_System_Threading", 
                        "Win32_UI_WindowsAndMessaging", 
                        "Win32_Media_Audio", 
                        "Win32_Media_MediaFoundation", 
                        "Win32_System_LibraryLoader", 
                        "Win32_System_Com", 
                        "Win32_UI_Shell", 
                        "Win32_System_SystemServices", 
                        "Win32_Media_KernelStreaming"
                    ]}
rodio = { version = "0.20.1", default-features = false, features = ["symphonia-all"] }
image = "0.25.6"
rand = "0.9.0"
eframe = "0.31.1"
tungstenite = "*"

[build-dependencies]
embed-resource = "3.0"